--- a/typescript/index.html
+++ b/typescript/index.html
@@ -1,23 +1,131 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <title>Lavar → Secar → Guardar Platos (TS)</title>
-  <style>
-    body { font-family: sans-serif; padding: 2rem; }
-    .counter { margin: .5rem 0; }
-    button { padding: .5rem 1rem; }
-  </style>
-</head>
-<body>
-  <h1>Lavar → Secar → Guardar Platos</h1>
-  <div class="counter" id="washed">Lavados: 0</div>
-  <div class="counter" id="dried">Secados:  0</div>
-  <div class="counter" id="stored">Guardados: 0</div>
-  <div class="counter" id="elapsed">Tiempo transcurrido: 0.00s</div>
-  <button id="startBtn">Iniciar pipeline</button>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Simulador de Pipeline de Platos</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 2rem;
+        color: #333;
+      }
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+      }
+      .panel {
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        padding: 1rem;
+        margin-bottom: 1rem;
+        background-color: #f9f9f9;
+      }
+      .panel-left {
+        flex: 1;
+        min-width: 300px;
+      }
+      .panel-right {
+        flex: 1;
+        min-width: 300px;
+      }
+      h1 {
+        color: #2c3e50;
+        margin-bottom: 1.5rem;
+      }
+      h2 {
+        color: #3498db;
+        font-size: 1.2rem;
+        margin-top: 0;
+        margin-bottom: 1rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 1px solid #eee;
+      }
+      .counter {
+        margin: 0.8rem 0;
+        font-size: 1.1rem;
+      }
+      #historial {
+        height: 250px;
+        overflow-y: auto;
+        border: 1px solid #ddd;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #fff;
+      }
+      button {
+        padding: 0.7rem 1.2rem;
+        margin-right: 0.5rem;
+        background-color: #3498db;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background-color 0.2s;
+      }
+      button:hover {
+        background-color: #2980b9;
+      }
+      button:disabled {
+        background-color: #95a5a6;
+        cursor: not-allowed;
+      }
+      .config-item {
+        margin-bottom: 1rem;
+      }
+      label {
+        display: block;
+        margin-bottom: 0.5rem;
+      }
+      input {
+        padding: 0.5rem;
+        width: 60px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Simulador de Pipeline de Platos</h1>
 
-  <!-- Apunta al bundle compilado -->
-  <script type="module" src="./dist/script.js"></script>
-</body>
+    <div class="container">
+      <!-- Panel izquierdo con controles -->
+      <div class="panel panel-left">
+        <div class="panel">
+          <h2>Configuración</h2>
+          <div class="config-item">
+            <label for="numPlatos">Cantidad de platos:</label>
+            <input type="number" id="numPlatos" min="1" max="20" value="5" />
+          </div>
+        </div>
+
+        <div class="panel">
+          <h2>Estado del Proceso</h2>
+          <div class="counter" id="lavados">Lavados: 0</div>
+          <div class="counter" id="secados">Secados: 0</div>
+          <div class="counter" id="guardados">Guardados: 0</div>
+          <div class="counter" id="tiempoTranscurrido">Tiempo: 0.00s</div>
+        </div>
+
+        <div class="panel">
+          <button id="botonIniciar">Iniciar Pipeline</button>
+          <button id="botonReiniciar" disabled>Reiniciar</button>
+        </div>
+      </div>
+
+      <!-- Panel derecho con historial -->
+      <div class="panel panel-right">
+        <div class="panel">
+          <h2>Historial de Ejecuciones</h2>
+          <div id="historial"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Nuestro script -->
+    <script type="module" src="./dist/script.js"></script>
+  </body>
 </html>
