fix: cambios de nombres

--- a/typescript/index.html
+++ b/typescript/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Simulador de Pipeline de Platos</title>
+    <title>Simulador de Platos</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -89,10 +89,9 @@
     </style>
   </head>
   <body>
-    <h1>Simulador de Pipeline de Platos</h1>
+    <h1>Simulador de Platos</h1>
 
     <div class="container">
-      <!-- Panel izquierdo con controles -->
       <div class="panel panel-left">
         <div class="panel">
           <h2>Configuración</h2>
@@ -111,12 +110,11 @@
         </div>
 
         <div class="panel">
-          <button id="botonIniciar">Iniciar Pipeline</button>
+          <button id="botonIniciar">Iniciar</button>
           <button id="botonReiniciar" disabled>Reiniciar</button>
         </div>
       </div>
 
-      <!-- Panel derecho con historial -->
       <div class="panel panel-right">
         <div class="panel">
           <h2>Historial de Ejecuciones</h2>
@@ -125,7 +123,6 @@
       </div>
     </div>
 
-    <!-- Nuestro script -->
     <script type="module" src="./dist/script.js"></script>
   </body>
 </html>
